syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Services";

package Message;

service MessagesService {
  rpc SendMessages (MessageList) returns (SkippedMessages);
}

message MessageList {
  string ClientId = 1;
  repeated MessageDto Messages = 2;
}

message MessageDto{
  string Content = 1;
  int64 MessageId = 2;
  google.protobuf.Timestamp CreatedAt = 3;
}

message SkippedMessages {
  repeated MessageDto Messages = 1;
}
